# CareJudge

./: .gitignore  FINAL_RESULTS.json  README.md  SUPPLEMENTARY_RESULTS.md  pyproject.toml  requirements.txt  run_dual_api_full.sh  run_gpt55_experiment.sh  run_local_experiment.sh
care_judge/: baselines.py  baselines_systems.py  experiments.py  schemas.py  utils.py
configs/: experiments.yaml
data/: judgebench.jsonl  judgebench_2k.jsonl  judgebench_h1.jsonl  judgebench_h2.jsonl  rewardbench_1k.jsonl  rewardbench_1k_h1.jsonl  rewardbench_1k_h2.jsonl  rewardbench_2k.jsonl  tldr_2k.jsonl
docs/: E1_supplementary_experiment.md
examples/: mini_pairs.jsonl  test_100.jsonl
outputs/: _smoke_15b.jsonl  final_analysis.json  mistral7b_jb.jsonl  qwen14b_jb_h1.jsonl  qwen14b_jb_h2.jsonl  qwen14b_rb_h1.jsonl  qwen14b_rb_h2.jsonl  qwen15b_jb.jsonl  qwen15b_rb.jsonl  qwen3b_jb.jsonl  qwen7b_jb.jsonl
paper/: aaai2027.sty  binhex.tex  main.aux  main.bbl  main.blg  main.tex  refs.bib
reports/: qwen15b_mtbench_human_mtbench_human_reliability.csv  qwen15b_realistic_judgebench_reliability.csv  qwen15b_realistic_table.csv  qwen15b_realistic_tldr_reliability.csv  qwen15b_reliability.csv  qwen15b_table.csv
scripts/: analyze_innovations.py  collect_6call.py  collect_ensemble_features.py  collect_ladder.py  collect_qwen_mp.py  collect_uncertainty.py  collect_uncertainty_concurrent.py  compute_alpha_sweep.py  compute_signal_gaps.py  concurrent_collect.py  conformal_baseline.py  convert_dataset.py  convert_mtbench_human.py  download_models.py  download_realistic_benchmarks.py  (+35 more)
(+183 files in other folders)
