[project]
name = "care-judge"
version = "0.1.0"
description = "Calibrated, abstaining, and robust LLM-as-a-judge experiments"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "tqdm>=4.66",
  "pyyaml>=6.0",
  "joblib>=1.3",
]

[project.optional-dependencies]
api = ["litellm>=1.40"]
hf = ["datasets>=2.18"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["care_judge*"]
